--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,15 @@
 <div class="jumbotron">
-  <h1>Jumbotron heading</h1>
-  <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-  <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+  <h1>Slackbot for Telegram</h1>
+  <p class="lead">
+    A bot that can be taught to respond messages like you want.<br />
+    Like Slackbot, but in Telegram Messenger
+  </p>
+  <br />
+  <p>
+    <a class="btn btn-lg btn-primary" href="https://telegram.me/SlackRobot" role="button">
+      <i class='fa fa-paper-plane'></i>&nbsp;&nbsp;&nbsp;Talk to @SlackRobot now
+    </a>
+  </p>
 </div>
 
 <div class="row marketing">
