--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -45,18 +45,21 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
+            <li role="presentation" class="active"><a href="https://telegram.me/SlackRobot"><i class='fa fa-paper-plane'></i>&nbsp;&nbsp;&nbsp;Talk to @SlackRobot</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">SlackRobot</h3>
+        <h3 class="text-muted"><%= image_tag 'icon-xs.png', class: 'logo' %>SlackRobot</h3>
       </div>
 
       <%= yield %>
 
       <footer class="footer">
-        <p>&copy; 2015 Company, Inc.</p>
+        <p class='pull-left'>&copy; 2015 - Óscar de Arriba (@odarriba)</p>
+        <p class='pull-right'>
+          <iframe src="http://ghbtns.com/github-btn.html?user=odarriba&amp;type=follow" scrolling="0" style="width:120px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="195"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackbot_telegram&amp;type=watch&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackbot_telegram&amp;type=fork&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
+        </p>
       </footer>
 
     </div> <!-- /container -->
