--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,24 +14,19 @@
 
 <div class="row marketing">
   <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <h4>Customizable</h4>
+    <p>You can customize responses to predefined messages, so SlackRobot will response to the messages you want in the way you prefer.</p>
   </div>
-
   <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+    <h4>Chat independent</h4>
+    <p>SlackRobot have a different configuration for each chat, so you can easily customize the responses per-chat basis.</p>
+  </div>
+  <div class="col-lg-6">
+    <h4>Secure</h4>
+    <p>SlackRobot needs to access your messages to respond them.</p><p>But it's an <a href='https://github.com/odarriba/slackbot_telegram' target='_blank'>open source project</a>, so you can see the code and check that we aren't storing your messages and data.</p>
+  </div>
+  <div class="col-lg-6">
+    <h4>Web interface</h4>
+    <p>Configuration is made via a secret URL that allows to change the bot's configuration in each chat.</p>
   </div>
 </div>
