--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <%= csrf_meta_tags %>
 
     <title>SlackRobot - Slackbot for Telegram</title>
 
@@ -50,11 +51,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <% if @chat.blank? %>
           <a class="navbar-brand" href="#">SlackRobot</a>
+          <% else %>
+          <%= link_to "SlackRobot", responses_path(chat_id: @chat.id, telegram_id: @chat.telegram_id), class: 'navbar-brand' %>
+          <% end %>
         </div>
         <div id="navbar" class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
-            <li class=""><a href="/">About SlackRobot&nbsp;<i class='fa fa-chevron-right'></i></a></li>
+            <% unless @chat.blank? %>
+            <li><%= link_to "Configuration panel", responses_path(chat_id: @chat.id, telegram_id: @chat.telegram_id) %></li>
+            <% end %>
+            <li><a href="/">About SlackRobot&nbsp;<i class='fa fa-chevron-right'></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
