--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -2,6 +2,8 @@
   <h1>Configuration <small><%= "#{@chat.is_group ? "group chat titled" : "chat with"} #{@chat.title}" %></small></h1>
 </div>
 
+<%= bootstrap_flash %>
+
 <%= link_to "<i class='fa fa-plus'></i>&nbsp;&nbsp;New response".html_safe, new_response_path(chat_id: @chat.id, telegram_id: @chat.telegram_id), class: "btn btn-success pull-right" %>
 
 <table class="table table-striped table-responses">
