Add show action.

--- a/app/views/responses/index.html.erb
+++ b/app/views/responses/index.html.erb
@@ -1,5 +1,8 @@
 <div class="page-header">
-  <h1>Configuration <small><%= "#{@chat.is_group ? "group chat titled" : "chat with"} #{@chat.title}" %></small></h1>
+  <h1>
+    Configuration
+    <small><%= "#{@chat.is_group ? "group chat titled" : "chat with"} #{@chat.title}" %></small>
+  </h1>
 </div>
 
 <%= bootstrap_flash %>
