--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
   </div>
   <div class="col-lg-6">
     <h4>Secure</h4>
-    <p>SlackRobot needs to access your messages to respond them.</p><p>But it's an <a href='https://github.com/odarriba/slackbot_telegram' target='_blank'>open source project</a>, so you can see the code and check that we aren't storing your messages and data.</p>
+    <p>SlackRobot needs to access your messages to respond them.</p><p>But it's an <a href='https://github.com/odarriba/slackrobot' target='_blank'>open source project</a>, so you can see the code and check that we aren't storing your messages and data.</p>
   </div>
   <div class="col-lg-6">
     <h4>Web interface</h4>
