--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -57,8 +57,8 @@
         <p class='pull-left'>&copy; 2015 - Óscar de Arriba (@odarriba)</p>
         <p class='pull-right'>
           <iframe src="https://ghbtns.com/github-btn.html?user=odarriba&amp;type=follow" scrolling="0" style="width:120px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="195"></iframe>
-          <iframe src="https://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackbot_telegram&amp;type=watch&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
-          <iframe src="https://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackbot_telegram&amp;type=fork&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackrobot&amp;type=watch&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=odarriba&amp;repo=slackrobot&amp;type=fork&amp;count=true" scrolling="0" style="width:50px; height: 20px;" allowtransparency="true" frameborder="0" height="20" width="107"></iframe>
         </p>
       </footer>
 
